--- a/src/V2/makefile
+++ b/src/V2/makefile
@@ -4,9 +4,10 @@ NVFLAGS = -gencode arch=compute_61,code=sm_61 \
           -gencode arch=compute_70,code=sm_70 \
           -gencode arch=compute_75,code=sm_75 \
           -gencode arch=compute_80,code=sm_80 \
-          -gencode arch=compute_86,code=sm_86
+          -gencode arch=compute_86,code=sm_86 \
+          --default-stream per-thread
 
-LDFLAGS = -lcublas -lcurand
+LDFLAGS = -lcublas -lcurand -lcudart
 EXE = build/nn.exe
 PROF_EXE = build/nn_prof.exe
 SRC = main.cu neural_net.cu utils.cu mnist.cu
