Added Profiling and stored output in text file

--- a/src/V2/makefile
+++ b/src/V2/makefile
@@ -7,13 +7,16 @@ NVFLAGS = -gencode arch=compute_61,code=sm_61 \
           -gencode arch=compute_86,code=sm_86
 
 LDFLAGS = -lcublas -lcurand
-EXE = build/nn.exe
+EXE = build/nn.exe 
 PROF_EXE = build/nn_prof.exe
 SRC = main.cu neural_net.cu utils.cu mnist.cu
 OBJ = $(patsubst %.cu,build/%.o,$(SRC))
 PROF_OBJ = $(patsubst %.cu,build/%.prof.o,$(SRC))
 PROF_DIR = build/prof
+NSIGHT_DIR = nsight_results
 GMON_OUT = build/gmon.out
+NSIGHT_REPORT = $(NSIGHT_DIR)/cpu_profile_report
+TRAINING_TIME_FILE = build/training_time.txt
 
 all: $(EXE)
 
@@ -24,7 +27,7 @@ $(PROF_EXE): build $(PROF_OBJ)
 	$(CC) $(FLAGS) $(NVFLAGS) -o $(PROF_EXE) $(PROF_OBJ) $(LDFLAGS)
 
 build:
-	mkdir -p build $(PROF_DIR)
+	mkdir -p build $(PROF_DIR) $(NSIGHT_DIR)
 
 build/%.o: %.cu | build
 	$(CC) $(FLAGS) $(NVFLAGS) -dc $< -o $@
@@ -33,16 +36,33 @@ build/%.prof.o: %.cu | build
 	$(CC) $(FLAGS) $(NVFLAGS) -dc $< -o $@
 
 run: $(EXE)
-	./$(EXE)
-	mv gmon.out $(GMON_OUT) 2>/dev/null || true
-	
+	./$(EXE) | tee build/full_output.txt
+	grep "Total training time" build/full_output.txt > build/training_time.txt
+	mv gmon.out build/ 2>/dev/null || true
+
+
 prof-run: $(PROF_EXE)
-	./$(PROF_EXE)
-	mv gmon.out $(GMON_OUT) 2>/dev/null || true
+	./$(PROF_EXE) | tee $(TRAINING_TIME_FILE)
+	mv gmon.out build/ 2>/dev/null || true
 
-clean:
-	rm -rf build
+# Nsight profiling step
+nsight-profile: $(EXE)
+	mkdir -p $(NSIGHT_DIR)
+	nsys profile --stats=true --force-overwrite=true --output=$(NSIGHT_REPORT) ./$(EXE)
+	@echo "Nsight Systems profiling results saved in $(NSIGHT_REPORT)."
 
+# Analyze Nsight profiling report
+nsight-analyze:
+	@echo "Analyzing Nsight profiling report..."
+	nsys stats $(NSIGHT_REPORT).nsys-rep
+	@echo "Summary report generated."
+	nsys export --format=csv $(NSIGHT_REPORT).nsys-rep
+	@echo "Profiling data exported to CSV format."
+	@echo "Opening Nsight Systems GUI..."
+	nsight-sys $(NSIGHT_REPORT).nsys-rep
+	@echo "Nsight Systems GUI opened with profiling report."
+
+# Profiling with gprof and visualization
 prof: prof-run
 	@echo "Generating profiling report..."
 	gprof $(PROF_EXE) $(GMON_OUT) > $(PROF_DIR)/gprof_analysis.txt
@@ -51,4 +71,7 @@ prof: prof-run
 	@echo "  - $(PROF_DIR)/gprof_analysis.txt"
 	@echo "  - $(PROF_DIR)/gprof_graph.png"
 
-.PHONY: all run prof-run clean prof
+clean:
+	rm -rf build $(NSIGHT_DIR)
+
+.PHONY: all run prof-run clean prof nsight-profile nsight-analyze
