--- a/src/V3/makefile
+++ b/src/V3/makefile
@@ -1,11 +1,10 @@
 CC = nvcc
 FLAGS = -O3 -Xcompiler -Wall,-Wextra,-ffast-math,-funroll-loops -pg
 NVFLAGS = -gencode arch=compute_61,code=sm_61 \
-          -gencode arch=compute_70,code=sm_70 \
-          -gencode arch=compute_75,code=sm_75 \
-          -gencode arch=compute_80,code=sm_80 \
-          -gencode arch=compute_86,code=sm_86
-
+	-gencode arch=compute_70,code=sm_70 \
+	-gencode arch=compute_75,code=sm_75 \
+	-gencode arch=compute_80,code=sm_80 \
+	-gencode arch=compute_86,code=sm_86
 LDFLAGS = -lcublas -lcurand
 EXE = build/nn.exe
 PROF_EXE = build/nn_prof.exe
@@ -17,6 +16,11 @@ NSIGHT_DIR = nsight_results
 GMON_OUT = build/gmon.out
 NSIGHT_REPORT = $(NSIGHT_DIR)/cpu_profile_report
 TRAINING_TIME_FILE = build/training_time.txt
+
+# Speedup analysis
+SPEEDUP_CC = gcc
+SPEEDUP_SRC = speedup_analysis.c
+SPEEDUP_EXE = build/speedup_analysis
 
 all: $(EXE)
 
@@ -39,7 +43,6 @@ run: $(EXE)
 	./$(EXE) | tee build/full_output.txt
 	grep "Total training time" build/full_output.txt > build/training_time.txt
 	mv gmon.out build/ 2>/dev/null || true
-
 
 prof-run: $(PROF_EXE)
 	./$(PROF_EXE) | tee $(TRAINING_TIME_FILE)
@@ -71,7 +74,17 @@ prof: prof-run
 	@echo "  - $(PROF_DIR)/gprof_analysis.txt"
 	@echo "  - $(PROF_DIR)/gprof_graph.png"
 
+# Compile and run speedup analysis
+$(SPEEDUP_EXE):
+	mkdir -p ../build
+	$(SPEEDUP_CC) -o $(SPEEDUP_EXE) $(SPEEDUP_SRC)
+
+# Target for speedup analysis
+speedup: $(SPEEDUP_EXE)
+	@echo "Running speedup analysis..."
+	@./$(SPEEDUP_EXE)
+
 clean:
 	rm -rf build $(NSIGHT_DIR)
 
-.PHONY: all run prof-run clean prof nsight-profile nsight-analyze
+.PHONY: all run prof-run clean prof nsight-profile nsight-analyze speedup
